Bugfix: The action menu is still overflows other cards

--- a/src/components/AddressList/AddressList.scss
+++ b/src/components/AddressList/AddressList.scss
@@ -1,10 +1,10 @@
 .card {
   &:hover {
-    transform: scale(1.02,1.02);
     transition: all .2s ease-in-out;
     cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(207,207,207,1);
-    -moz-box-shadow: 0px 0px 15px 0px rgba(207,207,207,1);
-    box-shadow: 0px 0px 15px 0px rgba(207,207,207,1);
+    -webkit-box-shadow: 0px 0px 5px 0px #007bff;
+    -moz-box-shadow: 0px 0px 5px 0px #007bff;
+    box-shadow: 0px 0px 5px 0px #007bff;
+    border: 1px solid #007bff;
   }
 }
